--- a/style.css
+++ b/style.css
@@ -60,6 +60,12 @@ ul>li {
     font-weight: 500;
 }
 
+.sidebar ul li:hover,
+.sidebar>li>svg:hover {
+    cursor: pointer;
+    color: #d6d6d6be;
+}
+
 li>svg {
     margin-right: 10px;
     width: 1.4rem;
@@ -80,7 +86,7 @@ li>svg {
     grid-template-rows: auto auto;
     /* background-color: aquamarine; */
     background-color: white;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.377);
+    box-shadow: 0px 6px 8px rgba(66, 66, 66, 0.243);
     margin-bottom: 5px;
 }
 
@@ -88,7 +94,7 @@ li>svg {
     display: flex;
     height: 40px;
     /* background-color: bisque; */
-    margin: 10px;
+    margin: 1rem 4rem;
 
     align-items: center;
 }
@@ -113,26 +119,38 @@ input[type="search"] {
     height: 2rem;
     background-color: rgb(243, 243, 243);
     margin-left: 1rem;
+    padding: 1rem;
 }
 
 .top-header img {
     height: 40px;
     width: 40px;
-    margin: 0 0.7rem;
+    margin: 0 1.5rem;
     border-radius: 50%;
+
 }
 
 .top-header svg {
     width: 1.5rem;
 }
 
+.top-header p {
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
 .second-header {
     display: flex;
     height: 100px;
-    font-size: 0.7rem;
+    font-size: 1.1rem;
     /* background-color: rgba(102, 51, 153, 0.488); */
-
+    margin: 0 1.5rem;
     align-items: center;
+}
+
+.greet-user>h1 {
+    font-weight: 700;
+    font-size: 2rem;
 }
 
 .my-img>img {
@@ -208,6 +226,7 @@ input[type="search"] {
 .card-box>h1 {
     font-size: 1.1rem;
     font-weight: bold;
+    margin-bottom: 0.5rem;
 }
 
 .card-box>p {
@@ -278,6 +297,8 @@ input[type="search"] {
     -webkit-line-clamp: 3; /* number of lines to show */
             line-clamp: 3;
     -webkit-box-orient: vertical;
+
+    color: rgb(176, 176, 176);
 }
 
 .devider {
@@ -290,7 +311,20 @@ input[type="search"] {
 
  .card-friends>img {
     border-radius: 50%;
-    margin-right: 1.5rem;
+    margin-right: 1rem;
  }
 
- 
+ .card-list>p {
+    margin-bottom: 0.2rem;
+ }
+
+ .parag-friends>p:nth-child(2) {
+    color: rgb(176, 176, 176);
+    font-weight: 100;
+ }
+
+
+ button:hover {
+    opacity: 0.8;
+    cursor: pointer;
+ }
